--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 张杭的个人博客
+title: F12的秘密
 subtitle: 一个偏执的热血青年在偏执的道路上越陷越深
-description: 张杭
+description:  源码有什么好看的，搞不懂。。。
 keywords: 张杭
 author: 张杭
 email: zhanghangnice@gmail.com
