--- a/themes/landscape/_config.yml
+++ b/themes/landscape/_config.yml
@@ -2,7 +2,7 @@
 menu:
   Home: /
   Archives: /archives
-rss: /atom.xml
+  GitHub: https://github.com/ZhanghangNice
 
 # Content
 excerpt_link: Read More
@@ -29,7 +29,7 @@ show_count: false
 
 # Miscellaneous
 google_analytics:
-favicon: /favicon.png
+favicon: /css/images/favicon.png
 twitter:
 google_plus:
 fb_admins:
