--- a/_config.yml
+++ b/_config.yml
@@ -70,5 +70,5 @@ theme: landscape
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repo: https://github.com/ZhanghangNice/zhanghangnice.github.io.git
+  repo: git@github.com:ZhanghangNice/zhanghangnice.github.io.git
   branch: master
